@@ -62,7 +62,8 @@ Rboolean
 PDFDeviceDriver(pDevDesc, const char *, const char *, const char *,
 		const char **, const char *, const char *, const char *,
 		double, double, double, int, int, const char*, SEXP,
-		int, int, const char *, int, int, Rboolean, Rboolean);
+		int, int, const char *, int, int, Rboolean, Rboolean,
+                Rboolean);
 
 #ifdef WIN32
 SEXP devga(SEXP);
