@@ -28,6 +28,10 @@
       \pkg{methods} on which packages can set methods.  It will be
       invoked by \code{X \%x\% Y} if either \code{X} or \code{Y} is an S4
       object.
+
+      \item \code{pdf()} now has an \code{offline} argument.  If that is
+      set to \code{TRUE} then the device does NOT create a PDF file
+      (but it can still be queried, e.g., for font metric info).
     }
   }
   
